--- a/style.css
+++ b/style.css
@@ -4,3 +4,18 @@
     box-sizing: border-box;
     overflow: hidden;
 }
+
+body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(44, 43, 43);
+    color: rgb(81, 201, 91);
+}
+
+canvas {
+    border: 1px solid rgb(92, 87, 87);
+    box-shadow: 0px 0px 20px 1px black;
+}
